infrastructure/traefik/templates/authelia-forwardauth-middleware.yaml
# From https://www.authelia.com/integration/kubernetes/traefik-ingress/#middleware
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  labels:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
spec:
  forwardAuth:
    address: http://authelia.auth.svc.cluster.local/api/authz/forward-auth
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
